--- a/index.html
+++ b/index.html
@@ -5,9 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link  rel="stylesheet" href="style.css">
     <script src="calculator.js" defer></script>
 </head>
 <body>
-    
+    <div id="display"></div>
+    <div>
+        <div>
+            <div>
+                <button class="digit">9</button>
+                <button class="digit">8</button>
+                <button class="digit">7</button>
+            </div>
+            <div>
+                <button class="digit">6</button>
+                <button class="digit">5</button>
+                <button class="digit">4</button>
+            </div>
+            <div>
+                <button class="digit">3</button>
+                <button class="digit">2</button>
+                <button class="digit">1</button>
+            </div>
+            <div>
+                <button class="digit">0</button>
+                <button id="equals">=</button>
+                <button id="clear">clear</button>
+            </div>
+        </div>
+        <div>
+            <button class="operator">+</button>
+            <button class="operator">-</button>
+            <button class="operator">*</button>
+            <button class="operator">/</button>
+        </div>
+    </div>
 </body>
 </html>
